@@ -1,3 +1,7 @@
+2018-04-29  Carl Hetherington  <cth@carlh.net>
+
+	* Add command-line option to specify directory containing config (#1284).
+
 2018-04-27  Carl Hetherington  <cth@carlh.net>
 
 	* Fix incorrect container size when loading a OV/VF combination into the player.
